--- a/Sources/MagicCardTracker.Pwa/_Imports.razor
+++ b/Sources/MagicCardTracker.Pwa/_Imports.razor
@@ -9,4 +9,5 @@
 @using MagicCardTracker.Pwa
 @using MagicCardTracker.Pwa.Shared
 @using MagicCardTracker.Pwa.Components
+@using MagicCardTracker.Pwa.Settings
 @using ChartJs.Blazor;
