--- a/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/QuickCollect.razor
@@ -1,13 +1,13 @@
 @page "/collection/quick-collect"
 
 @using Commands
+@using Constants
 @using Exceptions
 @using MagicCardTracker.Contracts
 @using System.Threading
 @using MagicCardTracker.Pwa.Components
 @using MagicCardTracker.Pwa.Notifications
 @using MediatR
-@using Models
 @using Queries
 @inject IMediator _mediator
 @inject INotificationService _notificationService
