Added CardsByValue page

--- a/Sources/MagicCardTracker.Pwa/Pages/Profile.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Profile.razor
@@ -43,7 +43,9 @@
                         </li>
                         }
                     </ol>
+                    
                 </div>
+                <a class="text-center" href="profile/cards-by-value"> Show more... </a>
                 
             </div>
             <div class="mt-2 content bg-elevated d-flex flex-column">
