--- a/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
         <div class="text-center color-white-60 small content">
-            Magic Card Tracker is unofficial Fan Content permitted under the <a href="https://company.wizards.com/en/legal/fancontentpolicy">Fan Content Policy</a>. 
+            Magic Card Tracker is unofficial Fan Content permitted under the <a href="https://company.wizards.com/en/legal/fancontentpolicy" target="_blank">Fan Content Policy</a>. 
             Not approved/endorsed by Wizards. 
             Portions of the materials used are property of Wizards of the Coast. 
             ©Wizards of the Coast LLC; Source of Magic Card Tracker ©Stefan Wilkes.
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-12">
         <div class="content pt-0 small d-flex justify-content-between">
-            <a href="@_infoSettings.GitHubUrl" target="blank"><i class="bi bi-github me-1"></i> Open Source </a>
+            <a href="@_infoSettings.GitHubUrl" target="_blank"><i class="bi bi-github me-1"></i> Open Source </a>
             <a href="/privacy-policy">Privacy Policy</a>
         </div>
     </div>
