--- a/Sources/MagicCardTracker.Pwa/Pages/CardsByValue.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/CardsByValue.razor
@@ -1,5 +1,4 @@
 @page "/profile/cards-by-value"
-@using Blazored.LocalStorage
 @using ChartJs.Blazor.BarChart
 @using MagicCardTracker.Pwa.Components
 @using MagicCardTracker.Pwa.Extensions
@@ -9,15 +8,12 @@
 @using Queries
 @implements IDisposable
 @inject IMediator _mediator
-@inject ILocalStorageService _localStorage
-@inject CollectionSettings _settings
+@inject IUserSettings _userSettings
+@inject CollectionSettings _collectionSettings
 
 <div class="row">
     <div class="col-12 lead">
         <a href="profile">&lt; Profile</a> | Cards by value
-        <span class="action-link float-end" @onclick="@ToggleCurrencyAsync"> 
-            @_dominatingCurrency.ToCurrencySymbol() <i class="bi bi-sort-numeric-down-alt"></i>
-        </span>
     </div>
 </div>
 <LoadingIndicator IsBusy="@_isLoading" 
@@ -33,8 +29,7 @@
                 <tr>
                     <th scope="col" class="d-none d-md-table-cell">#</th>
                     <th scope="col">Name</th>
-                    <th scope="col">$</th>
-                    <th scope="col">€</th>
+                    <th scope="col">@_userSettings.Currency.ToCurrencySymbol() <i class="bi bi-sort-numeric-down-alt"></i></th>
                 </tr>
             </thead>
             <tbody>
@@ -43,8 +38,7 @@
                     <tr class="selectable" @onclick="@(() => ShowCardAsync(card))">
                         <th scope="row" class="d-none d-md-table-cell">@card.SetCode.ToUpper() @card.Number</th>
                         <td> <span class="@(card.FoilCount > 0 ? "rainbow-text" : null)">@card.Name</span></td>
-                        <td>@card.GetSingleCardValue(Currency.Dollar).ToString("F2")</td>
-                        <td>@card.GetSingleCardValue(Currency.Euro).ToString("F2")</td>
+                        <td>@card.GetSingleCardValue(_userSettings.Currency).ToString("F2")</td>
                     </tr>
                 }
             </tbody>
@@ -71,8 +65,6 @@
 
     private bool _isLoading;
 
-    private Currency _dominatingCurrency;
-
     private CardOverlay _cardOverlay;
 
     private int _take;
@@ -93,7 +85,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        _dominatingCurrency = await _localStorage.GetItemAsync<Currency>("currency", _cts.Token);
         await LoadCollectionAsync();
     }
 
@@ -101,25 +92,16 @@
     {
         _isLoading = true;
         _collection = await _mediator.Send(new GetCollectedCards(), _cts.Token);
-        _collection = _collection.OrderByDescending(c => c.GetSingleCardValue(_dominatingCurrency));
-        _chartConfig.AddCollectionValueBySet(_collection, _dominatingCurrency);
+        _collection = _collection.OrderByDescending(
+                                    c => c.GetSingleCardValue(_userSettings.Currency));
+        _chartConfig.AddCollectionValueBySet(_collection, _userSettings.Currency);
         ShowMore();
         _isLoading = false;
     }
 
-    private async Task ToggleCurrencyAsync()
-    {
-        _dominatingCurrency = _dominatingCurrency == Currency.Dollar
-            ? Currency.Euro
-            : Currency.Dollar;
-
-        await _localStorage.SetItemAsync("currency", _dominatingCurrency, _cts.Token);
-        await LoadCollectionAsync();
-    }
-
     private void ShowMore()
     {
-        _take += _settings.DisplayBatchSize;
+        _take += _collectionSettings.DisplayBatchSize;
         _hasMore = _take < _collection.Count();
         _loadedCards = _collection.Take(_take);
     }
