--- a/Sources/MagicCardTracker.Pwa/Pages/Error.razor
+++ b/Sources/MagicCardTracker.Pwa/Pages/Error.razor
@@ -10,7 +10,7 @@
         <p>
             You can now gracefully reload the application. In case this error persist, 
             feel free to create an issue on 
-            <a href="@(_infoSettings.GitHubUrl)/issues" target="blank">
+            <a href="@(_infoSettings.GitHubUrl)/issues" target="_blank">
                 GitHub
             </a>.
         </p>
